fix(highlight-teaser): solves an overflow issue

--- a/assets/scss/components/_highlight-teaser.scss
+++ b/assets/scss/components/_highlight-teaser.scss
@@ -3,6 +3,7 @@
   --highlight-teaser-animation-duration: 1.5s;
 
   container-type: inline-size;
+  overflow-x: clip;
 
   .slick-slide {
     margin-bottom: spacing(10);
